--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Strength Checker</title>
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
     <div class="navbar">
@@ -23,15 +23,15 @@
     </div>
     <div class="clouds">
         <div id="parameters" class="parameters-section">
-            <div class="cloud"><img src="/assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">No consecutive or repeating numbers like 000 or 123</span></div>
-            <div class="cloud"><img src="/assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">Includes special characters</span></div>
-            <div class="cloud"><img src="/assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">Not a common name</span></div>
-            <div class="cloud"><img src="/assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">Alphanumeric with no repetition</span></div>
-            <div class="cloud"><img src="/assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">At least 8 characters</span></div>
+            <div class="cloud"><img src="./assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">No consecutive or repeating numbers like 000 or 123</span></div>
+            <div class="cloud"><img src="./assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">Includes special characters</span></div>
+            <div class="cloud"><img src="./assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">Not a common name</span></div>
+            <div class="cloud"><img src="./assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">Alphanumeric with no repetition</span></div>
+            <div class="cloud"><img src="./assets/img/cloud.png" class="cloud-icon"><span class="cloud-text">At least 8 characters</span></div>
         </div>
     </div>
     <button id="understood" class="understood" onclick="understood()">Understood</button>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
